it works in Obullo !
http://www.askaboutphp.com/50/codeigniter-extending-the-native-model-and-make-it-your-own.html 

@todo .. change htaccess rules in userguide DirectoryIndex index.php, index.html
@todo .. add htaccess rules for ngnix server
@todo .. put archived doc meta tag to old user guide base layout ..
@todo .. change obullo mvc2 names as Obullo GC in web site.            
@todo .. change mvc2 map as GC in userguide                                   


NEXT VERSION
----------------------------------------------------------------

MONGO DB API ( loader::nosql('mongodb'); )
http://devzone.zend.com/article/12132-Getting-Started-with-MongoDB-and-PHP
http://lithify.me/en/docs/lithium/data/source/MongoDb

@next version todo .. think a js validator function
 var frmvalidator = new Validator("form");
 frmvalidator.addValidation("firstname","req","Please enter your First Name");
 frmvalidator.addValidation("firstname","maxlen=20","Max length for FirstName is 20");
 frmvalidator.addValidation("firstname","alpha");
 
@next version todo .. add user guide to uri protocol functionality ... http://localhost/obullo/index.php?foo=bar it works in just $config['uri_protocol']          = "PATH_INFO"; we need to explain this functionality ..
@next version todo .. utf8 support http://www.phpwact.org/php/i18n/utf-8
@next version todo .. look at include ob_error.php errors when someone use third party session library.
@next version todo .. if not posted a variable in form_validate class add it to log debug msg..
this variable not posted !!! .. 
 
@next version todo .. add $this->config->set_item('log_threshold', 1); to log helper, we will control it in app_controller
@next version todo .. add LOG users messages level '5' => 'REPORT', , change fopen write log, add error_log() func. 
@next version todo .. logging for exceptions, exception reports
@next version todo .. driver files for security helper.. xss functions .. i_post('', callback_func);